laborations/lab2/testsuite/good/subtyping/cmp_if_int_lte_double.cc
int main () {
	if (3 <= 5.0)
		int y;
	else {}
	return 0;
}
