laborations/lab2/testsuite/bad/bad/return_if_left_int_double.cc
// Return must always return something of the right type.
int main() {
  if (42 >= 0) {
    return 0.5;
  } else {}

  return 0;
}
